discussion/kv_engine/173498/173498_rev30_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51681: Replace full CM scans with variables updated in-place

Instead of looping through every checkpoint owned
by the CheckpointManager and summing the individual
stats, create CM-level variables which are updated
in-place by Checkpoint MemoryCounters.

Change-Id: I369046cc1d966204e92a35c45799acd01d1d7b70

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-04-27 11:27:12.000000000
Message: 
Patch Set 30: Patch Set 29 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-27 11:41:10.000000000
Message: 
Patch Set 30: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38396/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: no member named "memUsage" in "CheckpointManager"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38396/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17057/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:87:13: error: no member named "memUsage" in "CheckpointManager" [clang-diagnostic-error]
    manager.memUsage += checkpointSize;
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:649:14: error: no member named "memUsage" in "CheckpointManager" [clang-diagnostic-error]
    manager->memUsage -= checkpointSize;
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17057/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: no member named "memUsage" in "CheckpointManager" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17057/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45714/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/checkpoint.cc(87): error C2039: "memUsage": is not a member of "CheckpointManager" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45714/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6805/ : FAILURE

Compile error at [2022-04-27T11:33:26.442Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: ?class CheckpointManager? has no member named ?memUsage?; did you mean ?getMemUsage??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6805/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27258/ : FAILURE

Compile error at [2022-04-27T11:40:11.145Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: no member named "memUsage" in "CheckpointManager"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27258/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6712/ : FAILURE

Compile error at [2022-04-27T11:40:08.745Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: no member named "memUsage" in "CheckpointManager"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6712/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19883/ : FAILURE

Compile error at [2022-04-27T11:38:08.032Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: no member named "memUsage" in "CheckpointManager"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19883/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19185/ : FAILURE

Compile error at [2022-04-27T11:35:51.583Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: ?class CheckpointManager? has no member named ?memUsage?; did you mean ?getMemUsage??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19185/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18841/ : FAILURE

Compile error at [2022-04-27T11:38:06.150Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: ?class CheckpointManager? has no member named ?memUsage?; did you mean ?getMemUsage??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18841/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17981/ : FAILURE

Compile error at [2022-04-27T11:31:26.350Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/checkpoint.cc:87:13:
error: no member named "memUsage" in "CheckpointManager"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17981/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16025/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
